Fixed the review comments
1) Renaming the cartCollection variable name to cartProductCollection.
2) Changing the find("tbody:last") to find("tbody") in the js file and
adding <thead> in the html file.
3) Removing the cartModel and replacing with "product" from
productModel.
4) Renaming files name (cartCollection.js and productCollection.js ) to
cartProductCollection.js and productCatalog.js.
5) Removing the extra added line for getting the quantity and using the
currentTarget.
6) Removing the line find("tr").gt(0).

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
 					<h1>Cart</h1>
 					<div class="content" style="clear:both;"> 
 						<div><table class="product-list full-width" id="cart_view"  cellpadding="0" cellspacing="0">
-      <tbody>
+      <thead>
       	<tr>
 	        <th class="narrow" style="border-right: 1px solid #fff;">Item</th>
 	        <th class="narrow" style="border-right: 1px solid #fff;">Quantity</th>
@@ -26,6 +26,8 @@
 	        <th class="narrow" style="border-right: 1px solid #fff;">Total</th>
 	        <th class="narrow" style="border-right: 1px solid #fff;"></th>
       </tr>
+      </thead>
+      <tbody>
        <tr>
 	        <td colspan="5" style="height: 55px;text-align: center;"><strong>No items found.</strong></td>
 	           
